RESOLVED FIXED 97872
[Refactoring] DOMSelection should not use shadowAncestorNode
https://bugs.webkit.org/show_bug.cgi?id=97872
Summary [Refactoring] DOMSelection should not use shadowAncestorNode
Shinya Kawanaka
Reported 2012-09-28 00:06:43 PDT
in selectionShadowAncestor, we're using node->shadowAncestorNode(), but it's deprecated. We should use TreeScope::ancestorInThisScope here.
Attachments
Patch (1.54 KB, patch)
2012-09-28 00:12 PDT, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-09-28 00:12:25 PDT
Dimitri Glazkov (Google)
Comment 2 2012-10-01 14:53:52 PDT
+1
WebKit Review Bot
Comment 3 2012-10-01 23:22:20 PDT
Comment on attachment 166159 [details] Patch Clearing flags on attachment: 166159 Committed r130124: <http://trac.webkit.org/changeset/130124>
WebKit Review Bot
Comment 4 2012-10-01 23:22:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.