[Refactoring] DOMSelection should not use shadowAncestorNode https://bugs.webkit.org/show_bug.cgi?id=97872

Reviewed by Ryosuke Niwa.

Since Node::shadowAncestorNode is deprecated, it should not be used.
Here, we should use TreeScope::ancestorInThisScope instead.

No new tests, covered by existing test.

* page/DOMSelection.cpp:
(WebCore::selectionShadowAncestor):


Canonical link: https://commits.webkit.org/116124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130124 268f45cc-cd09-0410-ab3c-d52691b4dbfc